--- a/CSS/media.css
+++ b/CSS/media.css
@@ -25,9 +25,44 @@
     .first_section_right img {
         width: 75%;
     }
+
+    .first_heading {
+        text-align: center;
+    }
+
+    .first_heading br {
+        display: none;
+    }
+
+    .same-style_p {
+        text-align: center;
+    }
+
+    .same-style_p br {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .food_option {
+        width: 20%;
+    }
 }
 
 @media screen and (max-width: 800px) {}
+
+@media screen and (max-width: 700px) {
+    .second_options-wrapper {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        min-width: 280px;
+        height: 60vh;
+        background: red;
+        padding: 10px;
+    }
+}
 
 @media screen and (max-width: 650px) {
     .nav_menu {
@@ -70,6 +105,10 @@
     .header_icon_burger {
         display: flex;
     }
+
+    .food_option {
+        width: 15%;
+    }
 }
 
 @media screen and (max-width: 600px) {
@@ -104,7 +143,6 @@
         gap: 10px;
     }
 }
-
 
 @media screen and (max-width: 300px) {
     .same-style_btn {
