--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,7 +16,8 @@
     /* Colors */
     --color-secondary: #FF7A50;
     --color-primary: #363853;
-    --color-default: #ffffff;
+    --color-default: #F9FAFF;
+    --color-white: #ffffff;
     --shadow-color-secondary: #ff683833;
     --shadow-color-primary: #36385333;
 
@@ -29,6 +30,10 @@
     --size-cons: 24px;
     --size-logo: 35px;
     --size-small: 12px;
+}
+
+body {
+    background: var(--color-default);
 }
 
 .container {
@@ -45,10 +50,10 @@
     font-size: var(--size-offer);
     padding: 15px 25px;
     background: var(--color-secondary);
-    color: var(--color-default);
+    color: var(--color-white);
     border-radius: 5px;
     cursor: pointer;
-    box-shadow: 0px 22px 40px var(--shadow-color-primary);
+    box-shadow: 0px 12px 40px var(--shadow-color-primary);
 }
 
 .same-style_btn:hover {
@@ -64,6 +69,16 @@
     font-size: var(--size-content);
     color: var(--color-primary);
     margin: 20px 0;
+}
+
+.progress_bar {
+    position: fixed;
+    width: 0px;
+    bottom: 0;
+    left: 0;
+    height: 5px;
+    background: var(--color-primary);
+    z-index: 99999999999;
 }
 
 header {
@@ -124,7 +139,7 @@ header.active {
     left: 0px;
     width: 100%;
     height: 3px;
-    background: var(--color-primary);
+    background: var(--color-secondary);
     opacity: 1;
 }
 
@@ -237,4 +252,96 @@ header.active {
 
 .first_link-p:hover {
     text-decoration-line: none;
+}
+
+.second_section {
+    padding: 30px 10px;
+    position: relative;
+}
+
+.second_heading {
+    font-size: var(--size-heading);
+    text-transform: capitalize;
+    color: var(--color-primary);
+    text-align: center;
+}
+
+.second_options-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    gap: 20px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 95%;
+    height: 60vh;
+    background: red;
+    padding: 10px;
+}
+
+.food_option {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 15px 20px;
+    gap: 5px;
+    width: 15%;
+    border-radius: 8px;
+    cursor: pointer;
+    background: var(--color-white);
+    white-space: nowrap;
+    box-shadow: 0px 10px 50px var(--shadow-color-primary);
+}
+
+.food_option:active {
+    transform: scale(.9);
+}
+
+.food_option.choosed {
+    background: var(--color-secondary);
+}
+
+.food_option-icon {
+    color: var(--color-primary);
+    font-size: var(--size-content);
+}
+
+.food_option-content {
+    color: var(--color-primary);
+    font-size: var(--size-content);
+}
+
+.food_option.choosed .food_option-content {
+    color: var(--color-default);
+    font-size: var(--size-content);
+}
+
+.food_option.choosed .food_option-icon {
+    font-size: var(--size-content);
+    color: var(--color-default);
+}
+
+.option_toggle-icon {
+    position: absolute;
+    top: 105px;
+    right: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex-direction: column;
+    gap: 10px;
+    cursor: pointer;
+}
+
+.option_toggle-icon:active {
+    transform: scale(.9);
+}
+
+.option_toggle-icon span {
+    width: 40px;
+    height: 5px;
+    background: var(--color-primary);
 }
